# cch24

./: Cargo.toml  Shuttle.toml
assets/: 23.html
src/: main.rs
src/handlers/: day_12.rs  day_16.rs  day_19.rs  day_2.rs  day_23.rs  day_5.rs  day_9.rs  mod.rs
src/models/: mod.rs  quote.rs
