[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
cargo-manifest = "0.17.0"
leaky-bucket = "1.1.2"
serde_json = "1.0.134"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "uuid"] }
uuid = "1.11.0"
chrono = "0.4.39"
